# terax-ai

src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/modules/: clipboard.rs  mod.rs
src-tauri/src/modules/pty/: session.rs
src/app/: App.tsx
src/modules/ai/lib/: agent.ts
src/modules/settings/: store.ts
src/modules/terminal/: index.ts
src/modules/terminal/lib/: copyOnSelect.test.ts  copyOnSelect.ts  dormantRing.ts  imagePaste.test.ts  imagePaste.ts  osc-handlers.test.ts  osc-handlers.ts  rendererPool.ts  useTerminalSession.ts
src/settings/sections/: GeneralSection.tsx
