[package]
name = "terax"
version = "0.7.3"
description = "Terax — an open-source AI-native terminal emulator"
authors = ["crynta"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "terax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
dirs = "5"
log = "0.4"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
globset = "0.4"
shared_child = "1"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"stream",
] }
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", default-features = false, features = ["rt"] }
tempfile = "3"
notify = "8.2.0"
arboard = { version = "3.4", features = ["image-data"] }
png = "0.17"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", default-features = false, features = [
	"apple-native",
] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", default-features = false, features = [
	"windows-native",
] }
windows-sys = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_JobObjects",
	"Win32_System_Threading",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true
